# CuisineCraft-System

./: CMakeLists.txt  README.md
customer/: CMakeLists.txt  customer.cpp  customer.h
drink/: CMakeLists.txt  drink.cpp  drink.h
dynamicArray/: CMakeLists.txt  dynamicArray.cpp  dynamicArray.h
food/: CMakeLists.txt  food.cpp  food.h
helperFunctions/: CMakeLists.txt  mainHelperFunctions.cpp  mainHelperFunctions.h
main/: CMakeLists.txt  loyalty.txt  main.cpp  restaurantExample_MACM1
menuItem/: CMakeLists.txt  menuItem.cpp  menuItem.h
tests/: CMakeLists.txt
tests/customerTests/: CMakeLists.txt  customerTests.cpp
tests/drinkTests/: CMakeLists.txt  drinkTests.cpp
tests/foodTests/: CMakeLists.txt  foodTests.cpp
